--- a/ipfs_hyperledger/config/core.yaml
+++ b/ipfs_hyperledger/config/core.yaml
@@ -52,13 +52,13 @@ peer:
         enabled: true
         # endorsementTimeout is the duration the gateway waits for a response
         # from other endorsing peers before returning a timeout error to the client.
-        endorsementTimeout: 30s
+        endorsementTimeout: 1s
         # broadcastTimeout is the duration the gateway waits for a response
         # from ordering nodes before returning a timeout error to the client.
-        broadcastTimeout: 30s
+        broadcastTimeout: 1s
         # dialTimeout is the duration the gateway waits for a connection
         # to other network nodes.
-        dialTimeout: 2m
+        dialTimeout: 1s
 
 
     # Keepalive settings for peer server and clients
